# color-coded-aperture

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt  README.md  TriangleDisparity.cpp  TriangleDisparity.h
cpp/tests/: CMakeLists.txt  testTriangleDisparity.cpp
data/calib-glass50-led-08.24.2018/: results.txt
data/calib-glass85-led-08.24.2018/: results.txt
matlab/: README.md  TriangleDisparity.m  calibCost.m  calibCost2.m  calibrateTriangleColorSpace.m  calibrateTriangleDisparity.m  depthFromDispPx.m  dispFromDepth.m  dispFromDepthPx.m  getMask.m  getPsf.m  initProper.m  pinholeProject.m  quat2rot.m  quatbarmat.m  quatconj.m  quatmat.m  testTriangleDisparityProper.m  testTriangleDisparityReal.m
